--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.19.9",
+    "@mysten/sui": "^1.45.0",
+    "@tanstack/react-query": "^5.90.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
