--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
      "@mysten/dapp-kit": "^0.19.9",
+     "supabase-js": "1.0.4",
      "zustand": "^4.1.0",
     "@mysten/sui": "^1.45.0",
     "@tanstack/react-query": "^5.90.11"
