--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "19.2.3",
      "@mysten/dapp-kit": "^0.19.9",
      "supabase-js": "1.0.4",
+     "@supabase/supabase-js": "2.90.1",
      "zustand": "^4.1.0",
     "@mysten/sui": "^1.45.0",
     "@tanstack/react-query": "^5.90.11"
